fix for bug #361624: user style sheets may not be imported from Safari, due to an uninitialized variable.  also, fix a warning I introduced with a recent checkin for MOZ_PLACES_BOOKMARKS ifdef support.

r=gavin